--- a/src/app/pages/trades/trades.component.scss
+++ b/src/app/pages/trades/trades.component.scss
@@ -30,6 +30,7 @@
                     height: 30px;
                     background: #8dbf42;
                     margin-left: auto;
+                    border: none;
                 }
             }
         }
