--- a/src/app/pages/trades/trade/trade.component.scss
+++ b/src/app/pages/trades/trade/trade.component.scss
@@ -50,6 +50,7 @@
                 padding: 5px 15px;
                 width: 70px;
                 height: 30px;
+                border: none;
 
                 &.edit-button {
                     background: #8dbf42;
