refactored balance logic

--- a/src/app/pages/trades/trades.component.html
+++ b/src/app/pages/trades/trades.component.html
@@ -19,6 +19,6 @@
 </div>
 
 <div class="chart">
-    <app-chart [dates]="this.dateLabels"
-               [balancePoints]="this.points"></app-chart>
+    <app-chart [dates]="dateLabels"
+               [balancePoints]="points"></app-chart>
 </div>
